--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'signing'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.10'
 }
 
 java {
@@ -25,6 +26,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.13'
     compile 'org.json:json:20200518'
     compile 'joda-time:joda-time:2.10.6'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 test {
@@ -50,6 +52,16 @@ publishing {
 
             from components.java
         }
+    }
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
 
